Added project section

--- a/about.html
+++ b/about.html
@@ -3,4 +3,4 @@ layout: default
 title: About
 ---
 
-This site was built with <a href = 'https://github.com/jekyll/jekyll'> Jekyll </a>, and incorporates aesthetic elements from the personal sites of <a href = 'https://kristian-georgiev.github.io'> Kristian Georgiev</a>, <a href = 'https://www.xuningyang.com/'>Xuning Yang</a>, and <a href = 'https://raytran.net/'>Raymond Tran</a>.
+This site was built with <a href = 'https://github.com/jekyll/jekyll'> Jekyll </a>, and was inspired by the personal sites of <a href = 'https://kristian-georgiev.github.io'> Kristian Georgiev</a>, <a href = 'https://www.xuningyang.com/'>Xuning Yang</a>, and <a href = 'https://raytran.net/'>Raymond Tran</a>.
