--- a/index.html
+++ b/index.html
@@ -1,16 +1,23 @@
---- 
+---
 layout: default
 title:
 ---
-<div class = "container" style = "flex: 1 0 auto; display: flex; flex-direction: column; font-size: large;">
-    <div style = "display: flex; flex-direction: row; justify-content: flex-start;">
-        <div id = "bio" class = 'pull-left' style = 'flex-grow: 1; padding-right: 20px;'>
-         <p> Hi, my name's Ezra Erives. I'm a junior at MIT studying mathematics and computer science. I'm particularly interested in machine learning, systems, and optimization. This summer I'll be working on machine learning at <a href = 'https://www.genesistherapeutics.ai'>Genesis Therapeutics</a>. Previously, I worked as a full stack engineering intern at <a href="https://www.findourview.com/">FindOurView</a>. My resume can be found <a href="{{ site.baseurl }}/assets/ezra_resume.pdf">here</a>. </p>
-         <p> In my spare time I like to bike, <a href="https://www.goodreads.com/user/show/144083087-ezra-erives">read</a>, and <a href = 'https://archboston.com/community/forums/development-projects.20/'>follow</a> construction projects in Greater Boston.</p>
+<div class="container" style="flex: 1 0 auto; display: flex; flex-direction: column; font-size: large;">
+    <div style="display: flex; flex-direction: row; justify-content: flex-start;">
+        <div id="bio" class='pull-left' style='flex-grow: 1; padding-right: 20px;'>
+            <p> Hi, my name's Ezra Erives. I'm a junior at MIT studying mathematics and computer science. I'm
+                particularly interested in machine learning, systems, and optimization. This past summer I worked on
+                protein-ligand docking at <a href='https://www.genesistherapeutics.ai'>Genesis Therapeutics</a>.
+                Previously, I worked as a full stack engineering intern at <a
+                    href="https://www.findourview.com/">FindOurView</a>. My resume can be found <a
+                    href="{{ site.baseurl }}/assets/ezra_resume.pdf">here</a>. </p>
+            <p> In my spare time I like to bike, <a
+                    href="https://www.goodreads.com/user/show/144083087-ezra-erives">read</a>, and <a
+                    href='https://archboston.com/community/forums/development-projects.20/'>follow</a> construction
+                projects in Greater Boston.</p>
         </div>
-        <div id = "picture" clas = 'pull-right' style = 'flex-grow: 1; padding-left: 20px;'>
-            <img src = 'assets/images/me.jpg' width="235" height="300"> </img>
+        <div id="picture" clas='pull-right' style='flex-grow: 1; padding-left: 20px;'>
+            <img src='assets/images/me.jpg' width="235" height="300"> </img>
         </div>
     </div>
 </div>
-
