--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@ title:
                     href="{{ site.baseurl }}/assets/updated_resume.pdf">here</a>. </p>
             <p> I also like to bike, <a href="https://www.goodreads.com/user/show/144083087-ezra-erives">read</a>, and
                 <a href='https://archboston.com/community/forums/development-projects.20/'>follow</a> construction
-                projects in Greater Boston.</p>
+                projects in Greater Boston.
+            </p>
         </div>
         <div id="picture" clas='pull-right' style='flex-grow: 1; padding-left: 20px;'>
             <img src='assets/images/me.jpg' width="235" height="300"> </img>
