--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@ title:
                 performance engineering, and systems programming. This past summer I worked on
                 protein-ligand docking at <a href='https://www.genesistherapeutics.ai'>Genesis Therapeutics</a>.
                 Previously, I worked as a full stack engineering intern at <a
-                    href="https://www.findourview.com/">FindOurView</a>. My resume can be found <a
-                    href="{{ site.baseurl }}/assets/updated_resume.pdf">here</a>. </p>
+                    href="https://www.findourview.com/">FindOurView</a>. </p>
             <p> I also like to bike, <a href="https://www.goodreads.com/user/show/144083087-ezra-erives">read</a>, and
                 <a href='https://archboston.com/community/forums/development-projects.20/'>follow</a> construction
                 projects in Greater Boston.
