--- a/index.html
+++ b/index.html
@@ -5,12 +5,10 @@ title:
 <div class="container" style="flex: 1 0 auto; display: flex; flex-direction: column; font-size: large;">
     <div style="display: flex; flex-direction: row; justify-content: flex-start;">
         <div id="bio" class='pull-left' style='flex-grow: 1; padding-right: 20px;'>
-            <p> Hi, my name's Ezra. I'm a junior at MIT interested in geometric deep learning, generative models,
-                performance engineering, and systems programming. This past summer I worked on
-                protein-ligand docking at <a href='https://www.genesistherapeutics.ai'>Genesis Therapeutics</a>.
-                Previously, I worked as a full stack engineering intern at <a
-                    href="https://www.findourview.com/">FindOurView</a>. </p>
-            <p> I also like to bike, <a href="https://www.goodreads.com/user/show/144083087-ezra-erives">read</a>, and
+            <p>  Hi, my name's Ezra. I'm a senior at MIT studying computer science and mathematics. I'm interested in probabilistic/flow-based generative modeling, geometric deep learning, and applications to science. I also enjoy thinking about programming languages, operating systems, compilers, and anything in-between.  </p>
+
+            <p> Previously, I have worked on trading infrastructure at <a href="https://drw.com">DRW</a>, on predicting binding affinity in protein-ligand docking at <a href='https://www.genesistherapeutics.ai'>Genesis Therapeutics</a>, and before that as a full stack engineering intern at <a href="https://www.findourview.com/">FindOurView</a>. </p>
+            <p> I also like to dance, bike, <a href="https://www.goodreads.com/user/show/144083087-ezra-erives">read</a>, and
                 <a href='https://archboston.com/community/forums/development-projects.20/'>follow</a> construction
                 projects in Greater Boston.
             </p>
