Add Verlet Flows arxiv link

--- a/research.html
+++ b/research.html
@@ -10,8 +10,8 @@ title: Research
     <div><u>E Erives</u>, B Jing, T Jaakkola</div>
     <div>AI4DifferentialEquations in Science @ ICLR, 2024</div>
     <div class="preprint-links">
-      <a href="https://openreview.net/forum?id=JkYOOK5ulR" target="_blank">[Open Review]</a>
-      <!-- <a href="URL_TO_CODE" target="_blank">[code]</a> -->
+      <a href="https://arxiv.org/abs/2405.02805" target="_blank">[arXiv]</a>
+      <a href= "https://github.com/eje24/verlet-flows" target="_blank">[code]</a>
     </div>
   </li>
   <li class="preprint-item">
