--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title:
         <div id="bio" class='pull-left' style='flex-grow: 1; padding-right: 20px;'>
             <p>  I'm an M.Eng. student at <a href="https://www.csail.mit.edu/">MIT CSAIL</a> supervised by Tommi Jaakkola. I'm interested in flow-based generative modeling, geometric deep learning, and applications to science. I also enjoy thinking about programming languages, operating systems, compilers, and anything in-between.</p>
 
-            <p> Previously, I completed an S.B in mathematics and in computer science at MIT. I have also worked on trading infrastructure at <a href="https://drw.com">DRW</a>, on predicting binding affinity in protein-ligand docking at <a href='https://www.genesistherapeutics.ai'>Genesis Therapeutics</a>, and before that as a full stack engineering intern at <a href="https://www.findourview.com/">FindOurView</a>. </p>
+            <p> Previously, I completed an S.B. in mathematics and in computer science at MIT. I have also worked on trading infrastructure at <a href="https://drw.com">DRW</a>, on predicting binding affinity in protein-ligand docking at <a href='https://www.genesistherapeutics.ai'>Genesis Therapeutics</a>, and before that as a full stack engineering intern at <a href="https://www.findourview.com/">FindOurView</a>. </p>
             <p> I also like to dance, bike, <a href="https://www.goodreads.com/user/show/144083087-ezra-erives">read</a>, and
                 <a href='https://archboston.com/community/forums/development-projects.20/'>follow</a> construction
                 projects in Greater Boston.
